# wishlist_app

./: .env.example  .gitignore  DEMO.md  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  seed_demo.py
alembic/: env.py
alembic/versions/: 001_create_users_table.py  002_wishlist_models.py  003_refresh_tokens.py  004_reservation_one_active_per_item.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  money.py  security.py
app/dependencies/: __init__.py  auth.py  database.py  session.py
app/lib/: __init__.py  idempotency.py
app/middleware/: __init__.py  rate_limit.py
app/models/: __init__.py  base.py  contribution.py  refresh_token.py  reservation.py  user.py  wish_item.py  wishlist.py
app/repositories/: __init__.py  contribution.py  refresh_token.py  reservation.py  user.py  wish_item.py  wishlist.py
app/schemas/: __init__.py  auth.py  contribution.py  errors.py  reservation.py  user.py  wish_item.py  wishlist.py
app/services/: __init__.py  auth.py  contribution.py  product_parser.py  reservation.py  user.py  wish_item.py  wishlist.py
app/websocket/: __init__.py  events.py  manager.py  redis_broadcast.py
frontend/: README.md  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: AddItemForm.tsx  EditItemForm.tsx  (+2 more)
tests/: __init__.py  conftest.py  test_api_public.py  test_contribution_service.py  test_money.py  test_product_parser.py  test_public_dto_schema.py  test_reservation_service.py  test_wishlist_service.py
(+21 files in other folders)
